--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: ["opened", "reopened", "synchronize"]
   push:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   sid-chopra-ci:
