--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "codecov": "^3.8.3"
+    "codecov": "^3.8.3",
+    "resize-observer-polyfill": "^1.5.1"
   }
 }
